--- a/src/assets/css/NewsCard.css
+++ b/src/assets/css/NewsCard.css
@@ -1,3 +1,14 @@
+.news-card {
+    width: 33.33%;
+}
+
+@media (max-width: 768px) {
+    .news-card {
+        width: 100%; /* Full width for smaller screens */
+    }
+}
+
+
 .news-card:hover .news-img img{
     transform: scale(1.1);
     transition: all 0.4s ease-in-out;
